...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/save"
        app:srcCompat="@drawable/ic_done" />
...
                        app:cardCornerRadius="4dp"
                        android:paddingHorizontal="@dimen/inputPadding"
                        app:cardElevation="0dp"
                        app:cardBackgroundColor="@android:color/transparent">

                        <ImageView
                            android:id="@+id/thumbnail"
                            android:layout_width="@dimen/cardThumbnailSize"
                            android:layout_height="@dimen/cardThumbnailSize"
                            android:contentDescription="@string/thumbnailDescription"
                            android:src="@mipmap/ic_launcher"/>

                        <com.google.android.material.imageview.ShapeableImageView
...
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storeName">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/storeNameEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="textCapWords" />

                    </com.google.android.material.textfield.TextInputLayout>
...
